--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 									<div class="plus">+</div>
 									<div class="right">
 										<div class="top">130</div>
-										<div class="bottom">ТВ каналов</div>
+										<div class="bottom">ТВ-каналов</div>
 									</div>
 								</div>
 								<div class="new_akcia_text"><span class="akcia_plus">+</span> IVI/MEGOGO <span
-										class="smallText"> Онлайн кинотеатр</span></div>
-								<div class="price_akcia"><span>399</span> руб / мес</div>
+										class="smallText"> Онлайн-кинотеатр</span></div>
+								<div class="price_akcia"><span>399</span> руб/мес</div>
 
 								<a class="scroll1 db alCenter button new_button" href="#form_block">Подключиться</a>
 							</div>
@@ -134,7 +134,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 								</div>
 							</div>
 							<div class="tarif">
-								<div class="head">ГИГА Оптиум + IVI</div>
+								<div class="head">ГИГА Оптимум + IVI</div>
 								<div class="main">
 									<div class="item">
 										<div class="ico"><img src="img/speed.png" alt=""></div>
@@ -147,7 +147,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 										<div class="ico"><img src="img/tv.png" alt=""></div>
 										<div class="text">
 											<div class="name">Интерактивное ТВ</div>
-											<div class="desc">130 ТВ каналов</div>
+											<div class="desc">130 ТВ-каналов</div>
 										</div>
 									</div>
 									<div class="item">
@@ -165,7 +165,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 								</div>
 							</div>
 							<div class="tarif">
-								<div class="head">ГИГА Оптиум + GO</div>
+								<div class="head">ГИГА Оптимум + GO</div>
 								<div class="main">
 									<div class="item">
 										<div class="ico"><img src="img/speed.png" alt=""></div>
@@ -178,7 +178,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 										<div class="ico"><img src="img/tv.png" alt=""></div>
 										<div class="text">
 											<div class="name">Интерактивное ТВ</div>
-											<div class="desc">130 ТВ каналов</div>
+											<div class="desc">130 ТВ-каналов</div>
 										</div>
 									</div>
 									<div class="item">
@@ -337,7 +337,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 									<img src="images/logos2/discount.png" alt="">
 								</div>
 							</div>
-							<div class="ah2 black">Получи скидку</div>
+							<div class="ah2 black">Получите скидку</div>
 							<p>Заплатите один раз и пользуйся
 								полгода или целый год</p>
 						</div>
@@ -567,7 +567,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 		<div class="b-modal" id="more2">
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
-				<div class="ah1 bold">ГИГА Оптиум + IVI</div>
+				<div class="ah1 bold">ГИГА Оптимум + IVI</div>
 				<p class="tarif-detailed-description">Акция «Улетное предложение». Цена указана на первые 6 месяцев с
 					учетом скидки. С 7 месяца услуга предоставляется на условиях действующих тарифных планов.
 					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
@@ -588,7 +588,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 		<div class="b-modal" id="more3">
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
-				<div class="ah1 bold">ГИГА Оптиум + GO</div>
+				<div class="ah1 bold">ГИГА Оптимум + GO</div>
 				<p class="tarif-detailed-description">Акция «Улетное предложение». Цена указана на первые 6 месяцев с
 					учетом скидки. С 7 месяца услуга предоставляется на условиях действующих тарифных планов.
 					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
