--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 											</span>
 										</div>
 
-										<a class="inb vT more_button cp">Подробнее </a>
+										<a class="inb vT more_button cp" onclick="toggleContent(this);">Подробнее </a>
 										<div class="hide ">
 											Быстрая передача и уверенный приём сигнала на частотах 2,4 и 5 ГГц. Четыре
 											5дБ
@@ -241,7 +241,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 										<div class="tit"><b>WI-FI роутер Netis WF2780 </b> <span>для тарифов свыше 100
 												Мбит/с</span></div>
 
-										<a class="inb vT more_button cp">Подробнее </a>
+										<a class="inb vT more_button cp" onclick="toggleContent(this);">Подробнее </a>
 										<div class="hide ">
 											Высокоскоростные гигабитные порты для подключения на скоростях от 100 Мбит/с
 											до
@@ -264,7 +264,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 									<div class="fleft rL hid left_block">
 										<div class="tit"><b>Смотрешка BOX </b> <span>Интерактивное ТВ</span></div>
 
-										<a class="inb vT more_button cp">Подробнее </a>
+										<a class="inb vT more_button cp" onclick="toggleContent(this);">Подробнее </a>
 										<div class="hide ">
 											Высокоскоростные гигабитные порты для подключения на скоростях от 100 Мбит/с
 											до
