--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 								</div>
 							</div>
 							<div class="ah2 black">Получите скидку</div>
-							<p>Заплатите один раз и пользуйся
+							<p>Заплатите один раз и пользуйтесь
 								полгода или целый год</p>
 						</div>
 
@@ -442,7 +442,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 								<div class="number">3</div>
 								<div class="text">Техник подключит
 									и настроит оборудование
-									(ТВ, ПК, телефон)
+									(ТВ, ПК, телефон),
 									заключит с вами договор
 									и примет оплату.</div>
 							</div>
