--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 						<input class="db w100 box inputbox required field_time" type="text" name="address"
 							placeholder="Адрес" id="adr11">
 						<div class="personal_container">
-							<input type="checkbox" id="check1" />
+							<input type="checkbox" id="check1" checked/>
 							<label class="personal" for="check1">Согласен на обработку персональных данных в
 								соответствии с <a id="usloviya">условиями</a></label>
 						</div>
