--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 			<!--end main_banner-->
 
 			<div class="tarif_text alCenter"> </div>
-			<div class="tarif_block my_tabs">
+			<div class="tarif_block my_tabs" id="tarif_block">
 				<div class="inner">
 					<div class="ah1 alCenter">Интернет</div>
 				</div>
@@ -144,7 +144,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 			<!--end tarif_block-->
 
 			<div class="tarif_text alCenter"> </div>
-			<div id="tarif_block" class="tarif_block my_tabs">
+			<div class="tarif_block my_tabs">
 				<div class="inner">
 					<div class="ah1 alCenter">Интернет + ТВ</div>
 				</div>
