--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 										</div>
 									</div>
 									<div class="rL hid right_block">
-										<div class="one fright rL hid"><b class="db">Навсегда</b>2300 <span class="rub"></span></div>
-										<div class="two rL hid fright"><b class="db">Аренда</b>60 <span class="rub"></span>/мес</div>
+										<div class="one fright rL hid"><b class="db">Навсегда</b>2300 <span class="rub">₽</span></div>
+										<div class="two rL hid fright"><b class="db">Аренда</b>60 <span class="rub">₽</span>/мес</div>
 										<div class="clear"></div>
 									</div>
 									<div class="clear"></div>
@@ -328,9 +328,9 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 									<div class="rL hid right_block">
 										<div class="one fright rL hid">
 											<b class="db">Навсегда</b>
-											<span>3300 <span class="rub"></span></span>
+											<span>3300 <span class="rub">₽</span></span>
 										</div>
-										<div class="two rL hid fright"><b class="db">Аренда</b>90 <span class="rub"></span>/мес</div>
+										<div class="two rL hid fright"><b class="db">Аренда</b>90 <span class="rub">₽</span>/мес</div>
 										<div class="clear"></div>
 									</div>
 									<div class="clear"></div>
@@ -346,8 +346,8 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 										</div>
 									</div>
 									<div class="rL hid right_block">
-										<div class="one fright rL hid"><b class="db">Навсегда</b>2900 <span class="rub"></span></div>
-										<div class="two rL hid fright"><b class="db">Аренда</b>99 <span class="rub"></span>/мес</div>
+										<div class="one fright rL hid"><b class="db">Навсегда</b>2900 <span class="rub">₽</span></div>
+										<div class="two rL hid fright"><b class="db">Аренда</b>99 <span class="rub">₽</span>/мес</div>
 										<div class="clear"></div>
 									</div>
 									<div class="clear"></div>
