--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ document.write('<link rel="stylesheet" type="text/css" href="css/tablet.css">');
 								Интерактивное ТВ
 								Онлайн-кинотеатр</div>
 							<div class="main-banner__left-text2">Успей подключиться на выгодных условиях</div>
-							<a href="#tarif_block" class="mbdg-info-main__btn main-banner__btn js-scroll">Выбрать тариф</a>
+							<a href="#tarif_block" class="mbdg-info-main__btn main-banner__btn scroll">Выбрать тариф</a>
 						</div>
 						<div class="main-banner__right">
 							<img src="img/main-nout.png" alt="">
