--- a/index.html
+++ b/index.html
@@ -647,11 +647,9 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="block">
 				<div class="inner">
 					<div class="footer__desc">
-						Заявки на подключение по акции принимаются до 07.03.2021, подключение — до 11.03.2021 включительно.
+						Заявки на подключение по акции «Возьми все за 1 ₽» принимаются до 11.05.21, подключение – до 16.05.21 включительно.
 						Акция проводится для новых абонентов-физических лиц и действует по адресам, где не предоставлялись услуги «Экотелеком» в течение 5 месяцев до момента подключения.
-						В зависимости от тарифа предоставляется подписка на видеосервис MEGOGO или онлайн-кинотеатры IVI, START и каталог Amediateka в сервисе «Смотрёшка».
-						Оборудование и дополнительные услуги при подключении по акции предоставляются на стандартных условиях.
-						Деньги, внесенные авансовым платежом на счет при подключении по акции, возврату не подлежат.
+						Цена один рубль указана на первый месяц с учетом скидки для всех тарифов.
 					</div>
 					<div class="footer-text">
 						<div class="footer-text-bottom">Услуги связи лицензированы.Подробные условия на <a href="https://www.ecotelecom.ru/" target="_blank">ecotelecom.ru</a>.</div>
@@ -706,10 +704,7 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
 				<div class="ah1 bold">Хит</div>
-				<p class="tarif-detailed-description">С 4 месяца услуги предоставляются на условиях действующих тарифных планов: «ХИТ» — 549 руб/мес, 	«ХИТ+ТВ» — 649 руб/мес, «ХИТ+GO» — 699 руб/мес, «УЛЬТРА+КИНО» — 799 руб/мес, «МЕГА+GO» — 949 руб/мес.
-				</p>
-				<p class="tarif-detailed-description">
-					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
+				<p class="tarif-detailed-description">При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее одной абонентской платы выбранного с 31 дня тарифа.
 				</p>
 				<a class="db modal_call button cp">Подключить</a>
 				<div class="price rL hid"><b>449</b> ₽/мес</div>
@@ -723,10 +718,7 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
 				<div class="ah1 bold">Хит</div>
-				<p class="tarif-detailed-description">С 4 месяца услуги предоставляются на условиях действующих тарифных планов: «ХИТ» — 549 руб/мес, 	«ХИТ+ТВ» — 649 руб/мес, «ХИТ+GO» — 699 руб/мес, «УЛЬТРА+КИНО» — 799 руб/мес, «МЕГА+GO» — 949 руб/мес.
-				</p>
-				<p class="tarif-detailed-description">
-					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
+				<p class="tarif-detailed-description">При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее одной абонентской платы выбранного с 31 дня тарифа.
 				</p>
 
 
@@ -742,10 +734,7 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
 				<div class="ah1 bold">Хит</div>
-				<p class="tarif-detailed-description">С 4 месяца услуги предоставляются на условиях действующих тарифных планов: «ХИТ» — 549 руб/мес, 	«ХИТ+ТВ» — 649 руб/мес, «ХИТ+GO» — 699 руб/мес, «УЛЬТРА+КИНО» — 799 руб/мес, «МЕГА+GO» — 949 руб/мес.
-				</p>
-				<p class="tarif-detailed-description">
-					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
+				<p class="tarif-detailed-description">При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее одной абонентской платы выбранного с 31 дня тарифа.
 				</p>
 
 				<a class="db modal_call button cp">Подключить</a>
@@ -760,10 +749,7 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
 				<div class="ah1 bold">ХИТ+ТВ</div>
-				<p class="tarif-detailed-description">С 4 месяца услуги предоставляются на условиях действующих тарифных планов: «ХИТ» — 549 руб/мес, 	«ХИТ+ТВ» — 649 руб/мес, «ХИТ+GO» — 699 руб/мес, «УЛЬТРА+КИНО» — 799 руб/мес, «МЕГА+GO» — 949 руб/мес.
-				</p>
-				<p class="tarif-detailed-description">
-					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
+				<p class="tarif-detailed-description">При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее одной абонентской платы выбранного с 31 дня тарифа.
 				</p>
 
 				<a class="db modal_call button cp">Подключить</a>
@@ -778,10 +764,7 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
 				<div class="ah1 bold">ХИТ+GO</div>
-				<p class="tarif-detailed-description">С 4 месяца услуги предоставляются на условиях действующих тарифных планов: «ХИТ» — 549 руб/мес, 	«ХИТ+ТВ» — 649 руб/мес, «ХИТ+GO» — 699 руб/мес, «УЛЬТРА+КИНО» — 799 руб/мес, «МЕГА+GO» — 949 руб/мес.
-				</p>
-				<p class="tarif-detailed-description">
-					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
+				<p class="tarif-detailed-description">При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее одной абонентской платы выбранного с 31 дня тарифа.
 				</p>
 
 				<a class="db modal_call button cp">Подключить</a>
@@ -796,10 +779,7 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
 				<div class="ah1 bold">УЛЬТРА+КИНО</div>
-				<p class="tarif-detailed-description">С 4 месяца услуги предоставляются на условиях действующих тарифных планов: «ХИТ» — 549 руб/мес, 	«ХИТ+ТВ» — 649 руб/мес, «ХИТ+GO» — 699 руб/мес, «УЛЬТРА+КИНО» — 799 руб/мес, «МЕГА+GO» — 949 руб/мес.
-				</p>
-				<p class="tarif-detailed-description">
-					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
+				<p class="tarif-detailed-description">При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее одной абонентской платы выбранного с 31 дня тарифа.
 				</p>
 
 				<a class="db modal_call button cp">Подключить</a>
@@ -814,10 +794,7 @@ WAN 1 Гбит/с, Wi-Fi 5 ГГц + 2,4 ГГц Dual-Band AC
 			<div class="b-modal_close arcticmodal-close"></div>
 			<div class="form1_block rL">
 				<div class="ah1 bold">МЕГА+GO</div>
-				<p class="tarif-detailed-description">С 4 месяца услуги предоставляются на условиях действующих тарифных планов: «ХИТ» — 549 руб/мес, 	«ХИТ+ТВ» — 649 руб/мес, «ХИТ+GO» — 699 руб/мес, «УЛЬТРА+КИНО» — 799 руб/мес, «МЕГА+GO» — 949 руб/мес.
-				</p>
-				<p class="tarif-detailed-description">
-					При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее 1000 руб.
+				<p class="tarif-detailed-description">При подключении на лицевой счет необходимо внести авансовый платеж в размере не менее одной абонентской платы выбранного с 31 дня тарифа.
 				</p>
 
 				<a class="db modal_call button cp">Подключить</a>
